--- a/src/NetworkMonitor.css
+++ b/src/NetworkMonitor.css
@@ -1,8 +1,10 @@
 .network-monitor {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background: #f9f9f9;
+    position: absolute;
+    width: 90%;
+    height: 80%;
+    top: 10%;
+    left: 5%;
+    background: #f5f5f5;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     font-family: 'Arial', sans-serif;
@@ -18,20 +20,20 @@ h1 {
 }
 
 table {
-    width: 100%;
+    width: 40%;
     border-collapse: collapse;
     margin-bottom: 20px;
 }
 
 table th,
 table td {
-    border: 1px solid #ddd;
-    padding: 8px;
+    border: 0.5px solid #000000;
+    padding: 10px;
     text-align: left;
 }
 
 table th {
-    background-color: #f2f2f2;
+    background-color: #bebebe;
 }
 
 .ip-info {
